fix(.task-filter): force long words to wrap
Fixes #4308 Task tabs cut off long words

Prevents long words from overflowing outside of tab width in button
bars by forcing them to break.

--- a/public/css/global-modules.styl
+++ b/public/css/global-modules.styl
@@ -149,6 +149,7 @@ $hrpg-button-bar
   li
     border-right: 1px solid darken(#fff,3.82%)
     float:left
+    word-wrap: break-word
   li:nth-of-type(2)
     border-radius: 0.382em 0em 0em 0.382em
   li:first-of-type
